# wasmambo5

./: .gitignore  Cargo.toml  Dockerfile  spin.toml
.github/workflows/: deploy.yaml
manifests/: deploy.yaml  spin.yaml  wasmamba.yaml
src/: lib.rs  logic.rs
tf/: .terraform.lock.hcl  cluster.tf  oidc.tf  outputs.tf  providers.tf
