[package]
name = "wasmambo5"
authors = ["David Gamero <david340804@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.0.0-rc.1" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }
serde_json = "1.0.59"
log = "0.4.0"
rand = "0.8.4"
serde = { version = "1.0.117", features = ["derive"] }
[workspace]
